[package]
authors = ["The Hyperledger Anoncreds Contributors"]
description = "Hyperledger Anoncreds CL Signatures"
documentation = "https://docs.rs/anoncreds-clsignatures"
edition = "2021"
license = "Apache-2.0"
name = "anoncreds-clsignatures"
readme = "README.md"
repository = "https://github.com/hyperledger/anoncreds-clsignatures-rs"
version = "0.2.4"
rust-version = "1.63"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde", "openssl_bn"]
openssl_bn = ["openssl"]
openssl_vendored = ["openssl_bn", "openssl/vendored"]

[dependencies]
amcl = "0.2"
glass_pumpkin = "1.6"
log = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
once_cell = "1"
openssl = { version = "0.10", optional = true }
rand = "0.8"
serde = { version = "1", optional = true, features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
serde_json = "1"

[[bench]]
name = "cl"
harness = false
